fix: replace workspace with 3.38.0

--- a/package.json
+++ b/package.json
@@ -121,10 +121,10 @@
     "@jest/globals": "29.7.0",
     "@libsql/client": "0.14.0",
     "@next/bundle-analyzer": "15.3.0",
-    "@payloadcms/db-postgres": "workspace:*",
-    "@payloadcms/eslint-config": "workspace:*",
-    "@payloadcms/eslint-plugin": "workspace:*",
-    "@payloadcms/live-preview-react": "workspace:*",
+    "@payloadcms/db-postgres": "3.38.0",
+    "@payloadcms/eslint-config": "3.38.0",
+    "@payloadcms/eslint-plugin": "3.38.0",
+    "@payloadcms/live-preview-react": "3.38.0",
     "@playwright/test": "1.50.0",
     "@sentry/nextjs": "^8.33.1",
     "@sentry/node": "^8.33.1",
@@ -141,7 +141,7 @@
     "chalk": "^4.1.2",
     "comment-json": "^4.2.3",
     "copyfiles": "2.4.1",
-    "create-payload-app": "workspace:*",
+    "create-payload-app": "3.38.0",
     "cross-env": "7.0.3",
     "dotenv": "16.4.7",
     "drizzle-kit": "0.28.0",
