--- a/packages/plugin-redirects/package.json
+++ b/packages/plugin-redirects/package.json
@@ -56,11 +56,11 @@
     "prepublishOnly": "pnpm clean && pnpm turbo build"
   },
   "devDependencies": {
-    "@payloadcms/eslint-config": "workspace:*",
-    "payload": "workspace:*"
+    "@payloadcms/eslint-config": "3.38.0",
+    "payload": "3.38.0"
   },
   "peerDependencies": {
-    "payload": "workspace:*"
+    "payload": "3.38.0"
   },
   "publishConfig": {
     "exports": {
