--- a/examples/astro/website/package.json
+++ b/examples/astro/website/package.json
@@ -12,6 +12,6 @@
     "@astrojs/node": "^9.0.0",
     "astro": "^5.1.1",
     "payload": "3.11.0",
-    "payload-app": "workspace:*"
+    "payload-app": "3.38.0"
   }
 }
