--- a/examples/remix/website/package.json
+++ b/examples/remix/website/package.json
@@ -16,7 +16,7 @@
     "@remix-run/serve": "^2.15.2",
     "isbot": "^4.1.0",
     "payload": "latest",
-    "payload-app": "workspace:*",
+    "payload-app": "3.38.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "0.32.6"
