--- a/packages/email-resend/package.json
+++ b/packages/email-resend/package.json
@@ -43,10 +43,10 @@
   "devDependencies": {
     "@types/jest": "29.5.12",
     "jest": "^29.7.0",
-    "payload": "workspace:*"
+    "payload": "3.38.0"
   },
   "peerDependencies": {
-    "payload": "workspace:*"
+    "payload": "3.38.0"
   },
   "engines": {
     "node": "^18.20.2 || >=20.9.0"
