--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "@eslint-react/eslint-plugin": "1.31.0",
     "@eslint/js": "9.22.0",
-    "@payloadcms/eslint-plugin": "workspace:*",
+    "@payloadcms/eslint-plugin": "3.38.0",
     "@types/eslint": "9.6.1",
     "@typescript-eslint/parser": "8.26.1",
     "eslint": "9.22.0",
