--- a/packages/payload/package.json
+++ b/packages/payload/package.json
@@ -85,7 +85,7 @@
   },
   "dependencies": {
     "@next/env": "^15.1.5",
-    "@payloadcms/translations": "workspace:*",
+    "@payloadcms/translations": "3.38.0",
     "@types/busboy": "1.5.4",
     "ajv": "8.17.1",
     "bson-objectid": "2.0.4",
@@ -117,7 +117,7 @@
   "devDependencies": {
     "@hyrious/esbuild-plugin-commonjs": "^0.2.4",
     "@monaco-editor/react": "4.7.0",
-    "@payloadcms/eslint-config": "workspace:*",
+    "@payloadcms/eslint-config": "3.38.0",
     "@types/json-schema": "7.0.15",
     "@types/minimist": "1.2.2",
     "@types/nodemailer": "6.4.17",
