--- a/packages/plugin-cloud-storage/package.json
+++ b/packages/plugin-cloud-storage/package.json
@@ -58,7 +58,7 @@
     "test": "echo \"No tests available.\""
   },
   "dependencies": {
-    "@payloadcms/ui": "workspace:*",
+    "@payloadcms/ui": "3.38.0",
     "find-node-modules": "^2.1.3",
     "range-parser": "^1.2.1"
   },
@@ -66,10 +66,10 @@
     "@types/find-node-modules": "^2.1.2",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.2",
-    "payload": "workspace:*"
+    "payload": "3.38.0"
   },
   "peerDependencies": {
-    "payload": "workspace:*",
+    "payload": "3.38.0",
     "react": "^19.0.0 || ^19.0.0-rc-65a56d0e-20241020",
     "react-dom": "^19.0.0 || ^19.0.0-rc-65a56d0e-20241020"
   },
