--- a/packages/plugin-form-builder/package.json
+++ b/packages/plugin-form-builder/package.json
@@ -61,20 +61,20 @@
     "test": "echo \"No tests available.\""
   },
   "dependencies": {
-    "@payloadcms/ui": "workspace:*",
+    "@payloadcms/ui": "3.38.0",
     "escape-html": "^1.0.3"
   },
   "devDependencies": {
-    "@payloadcms/eslint-config": "workspace:*",
+    "@payloadcms/eslint-config": "3.38.0",
     "@types/escape-html": "^1.0.4",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.2",
     "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
-    "payload": "workspace:*"
+    "payload": "3.38.0"
   },
   "peerDependencies": {
-    "payload": "workspace:*",
+    "payload": "3.38.0",
     "react": "^19.0.0 || ^19.0.0-rc-65a56d0e-20241020",
     "react-dom": "^19.0.0 || ^19.0.0-rc-65a56d0e-20241020"
   },
