--- a/packages/plugin-import-export/package.json
+++ b/packages/plugin-import-export/package.json
@@ -71,20 +71,20 @@
   },
   "dependencies": {
     "@faceless-ui/modal": "3.0.0-beta.2",
-    "@payloadcms/translations": "workspace:*",
-    "@payloadcms/ui": "workspace:*",
+    "@payloadcms/translations": "3.38.0",
+    "@payloadcms/ui": "3.38.0",
     "csv-parse": "^5.6.0",
     "csv-stringify": "^6.5.2",
     "qs-esm": "7.0.2"
   },
   "devDependencies": {
-    "@payloadcms/eslint-config": "workspace:*",
-    "@payloadcms/ui": "workspace:*",
-    "payload": "workspace:*"
+    "@payloadcms/eslint-config": "3.38.0",
+    "@payloadcms/ui": "3.38.0",
+    "payload": "3.38.0"
   },
   "peerDependencies": {
-    "@payloadcms/ui": "workspace:*",
-    "payload": "workspace:*"
+    "@payloadcms/ui": "3.38.0",
+    "payload": "3.38.0"
   },
   "publishConfig": {
     "exports": {
