--- a/packages/richtext-lexical/package.json
+++ b/packages/richtext-lexical/package.json
@@ -365,8 +365,8 @@
     "@lexical/selection": "0.28.0",
     "@lexical/table": "0.28.0",
     "@lexical/utils": "0.28.0",
-    "@payloadcms/translations": "workspace:*",
-    "@payloadcms/ui": "workspace:*",
+    "@payloadcms/translations": "3.38.0",
+    "@payloadcms/ui": "3.38.0",
     "@types/uuid": "10.0.0",
     "acorn": "8.12.1",
     "bson-objectid": "2.0.4",
@@ -389,7 +389,7 @@
     "@babel/preset-react": "7.26.3",
     "@babel/preset-typescript": "7.26.0",
     "@lexical/eslint-plugin": "0.28.0",
-    "@payloadcms/eslint-config": "workspace:*",
+    "@payloadcms/eslint-config": "3.38.0",
     "@types/escape-html": "1.0.4",
     "@types/json-schema": "7.0.15",
     "@types/node": "22.5.4",
@@ -399,14 +399,14 @@
     "babel-plugin-transform-remove-imports": "^1.8.0",
     "esbuild": "0.24.2",
     "esbuild-sass-plugin": "3.3.1",
-    "payload": "workspace:*",
+    "payload": "3.38.0",
     "swc-plugin-transform-remove-imports": "3.1.0"
   },
   "peerDependencies": {
     "@faceless-ui/modal": "3.0.0-beta.2",
     "@faceless-ui/scroll-info": "2.0.0",
-    "@payloadcms/next": "workspace:*",
-    "payload": "workspace:*",
+    "@payloadcms/next": "3.38.0",
+    "payload": "3.38.0",
     "react": "^19.0.0 || ^19.0.0-rc-65a56d0e-20241020",
     "react-dom": "^19.0.0 || ^19.0.0-rc-65a56d0e-20241020"
   },
