--- a/packages/richtext-slate/package.json
+++ b/packages/richtext-slate/package.json
@@ -51,8 +51,8 @@
     "prepublishOnly": "pnpm clean && pnpm turbo build"
   },
   "dependencies": {
-    "@payloadcms/translations": "workspace:*",
-    "@payloadcms/ui": "workspace:*",
+    "@payloadcms/translations": "3.38.0",
+    "@payloadcms/ui": "3.38.0",
     "is-hotkey": "0.2.0",
     "slate": "0.91.4",
     "slate-history": "0.86.0",
@@ -60,15 +60,15 @@
     "slate-react": "0.92.0"
   },
   "devDependencies": {
-    "@payloadcms/eslint-config": "workspace:*",
+    "@payloadcms/eslint-config": "3.38.0",
     "@types/is-hotkey": "^0.1.10",
     "@types/node": "22.5.4",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.2",
-    "payload": "workspace:*"
+    "payload": "3.38.0"
   },
   "peerDependencies": {
-    "payload": "workspace:*",
+    "payload": "3.38.0",
     "react": "^19.0.0 || ^19.0.0-rc-65a56d0e-20241020"
   },
   "engines": {
