--- a/packages/storage-azure/package.json
+++ b/packages/storage-azure/package.json
@@ -48,15 +48,15 @@
   "dependencies": {
     "@azure/abort-controller": "^1.1.0",
     "@azure/storage-blob": "^12.11.0",
-    "@payloadcms/plugin-cloud-storage": "workspace:*",
+    "@payloadcms/plugin-cloud-storage": "3.38.0",
     "range-parser": "^1.2.1"
   },
   "devDependencies": {
     "@types/range-parser": "^1.2.7",
-    "payload": "workspace:*"
+    "payload": "3.38.0"
   },
   "peerDependencies": {
-    "payload": "workspace:*"
+    "payload": "3.38.0"
   },
   "engines": {
     "node": "^18.20.2 || >=20.9.0"
