--- a/packages/storage-s3/package.json
+++ b/packages/storage-s3/package.json
@@ -49,14 +49,14 @@
     "@aws-sdk/client-s3": "^3.614.0",
     "@aws-sdk/lib-storage": "^3.614.0",
     "@aws-sdk/s3-request-presigner": "^3.614.0",
-    "@payloadcms/plugin-cloud-storage": "workspace:*"
+    "@payloadcms/plugin-cloud-storage": "3.38.0"
   },
   "devDependencies": {
     "@smithy/node-http-handler": "4.0.3",
-    "payload": "workspace:*"
+    "payload": "3.38.0"
   },
   "peerDependencies": {
-    "payload": "workspace:*"
+    "payload": "3.38.0"
   },
   "engines": {
     "node": "^18.20.2 || >=20.9.0"
