--- a/tools/releaser/package.json
+++ b/tools/releaser/package.json
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "@swc-node/register": "1.10.9",
-    "@tools/constants": "workspace:*",
+    "@tools/constants": "3.38.0",
     "chalk": "^4.1.2",
     "changelogen": "^0.5.5",
     "execa": "5.1.1",
